src/main/java/com/example/minzok/global/error/ErrorCode.java
package com.example.minzok.global.error;

import org.springframework.http.HttpStatus;

public interface ErrorCode {
    HttpStatus gethttpStatus();
    String getMessage();
}
